--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,15 @@
 [buildout]
 develop = .
 parts = scripts
+        pylint
 
 [scripts]
 recipe = zc.recipe.egg:scripts
 eggs = seqdiag_gui
+
+[pylint]
+recipe = zc.recipe.egg:scripts
+eggs = pylint
+       seqdiag_gui
+entry-points = pylint=pylint.lint:Run
+arguments = sys.argv[1:]
