Fix pylint integration with minitage recipe
The original zc.recipe.egg does not allow for per script arguments, but
pylint needs the developed egg as a dependecy. This causes arguments to
be applied to all scripts, including the main entry point.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,15 +1,17 @@
 [buildout]
 develop = .
-parts = scripts
+parts = instance
         pylint
 
-[scripts]
-recipe = zc.recipe.egg:scripts
+[instance]
+recipe = zc.recipe.egg
 eggs = seqdiag_gui
 
 [pylint]
-recipe = zc.recipe.egg:scripts
+recipe = minitage.recipe.scripts
 eggs = pylint
-       seqdiag_gui
+       ${instance:eggs}
 entry-points = pylint=pylint.lint:Run
-arguments = sys.argv[1:]
+pylint-arguments = [
+       '--output-format=colorized'
+       ] + sys.argv[1:]
