--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,10 +8,10 @@ recipe = zc.recipe.egg
 eggs = seqdiag_gui
 
 [pylint]
-recipe = minitage.recipe.scripts
+recipe = zc.recipe.egg
 eggs = pylint
        ${instance:eggs}
 entry-points = pylint=pylint.lint:Run
-pylint-arguments = [
+arguments = [
        '--output-format=colorized'
        ] + sys.argv[1:]
