Adapt pylint in buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,8 +10,5 @@ eggs = seqdiag_gui
 [pylint]
 recipe = zc.recipe.egg
 eggs = pylint
-       ${instance:eggs}
 entry-points = pylint=pylint.lint:Run
-arguments = [
-       '--output-format=colorized'
-       ] + sys.argv[1:]
+arguments = ['--output-format=colorized'] + sys.argv[1:]
