Cleanup buildout config

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,13 @@
 [buildout]
 develop = .
-parts = instance
-        pylint
+parts = pylint instance
 
 [instance]
 recipe = zc.recipe.egg
 eggs = seqdiag_gui
 
 [pylint]
-recipe = zc.recipe.egg
+recipe = z3c.recipe.scripts
 eggs = pylint
 entry-points = pylint=pylint.lint:Run
 arguments = ['--output-format=colorized'] + sys.argv[1:]
