--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,13 +1,7 @@
 [buildout]
 develop = .
-parts = pylint instance
+parts = instance
 
 [instance]
 recipe = zc.recipe.egg
 eggs = seqdiag_gui
-
-[pylint]
-recipe = z3c.recipe.scripts
-eggs = pylint
-entry-points = pylint=pylint.lint:Run
-arguments = ['--output-format=colorized'] + sys.argv[1:]
